<resources>
    <string name="app_name">360 VPN</string>
    <string name="no_vpn_connected">Vpn status: Not connected</string>
    <string name="prompt_spinner">Select location</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="select_vpn_location">Select Region you want to Connect</string>
    <string name="facebook_app_id">2146300222353523</string>

    <string name="search">Search here for region....</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="privacy">Privacy</string>
    <string name="rate">Rate</string>
    <string name="home">360 VPN</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="logo_inapp_link">https://github.com/librespeed/speedtest-android</string>

    <string name="privacy_policy">file:///android_asset/privacy_en.html</string>


    <string name="init_init">Loading</string>
    <string name="initFail_configError">Configuration error</string>
    <string name="initFail_retry">Retry</string>
    <string name="init_selecting">Selecting server</string>
    <string name="initFail_noServers">No servers available</string>
    <string name="serverSelect_message">Select a server</string>
    <string name="start">Start</string>
    <string name="test_dl">Download</string>
    <string name="test_ul">Upload</string>
    <string name="test_speedMeasure">Mbps</string>
    <string name="test_ping">Ping</string>
    <string name="test_jitter">Jitter</string>
    <string name="test_timeMeasure">ms</string>
    <string name="test_share">Share result</string>
    <string name="test_restart">New test</string>
    <string name="testFail_err">An error occurred</string>
    <string name="testFail_retry">Try again</string>
    <string name="privacy_open"><u>Privacy</u></string>
    <string name="privacy_close"><u>Back</u></string>
    <string name="speed_test">Speed Test</string>
    <string name="lang">language</string>
    <string name="auto_connect_to_fastest_server">Auto Connect to Fastest server</string>
    <string name="begin_test_speedtest">Begin Test</string>
    <string name="download_speedtest">DOWNLOAD</string>
    <string name="upload_speedtest">UPLOAD</string>
    <string name="downloadspeed_speedtest">0 Mbps</string>
    <string name="uploadspeed_speedtest">0 Mbps</string>
    <string name="ping_speedtest">PING</string>
    <string name="app_by_inceptial">APP BY INCEPTIAL</string>
    <string name="test_country">test</string>
    <string name="austrailia_country">Australia</string>
    <string name="canada_country">Canada</string>
    <string name="dubai_country">Dubai</string>
    <string name="england_country">England</string>
    <string name="france_country">France</string>
    <string name="germany_country">Germany</string>
    <string name="hongkong_country">Hong Kong</string>
    <string name="india_country">India</string>
    <string name="ireland_country">Ireland</string>
    <string name="italy_country">Italy</string>
    <string name="japan_country">Japan</string>
    <string name="netherlands_country">Netherlands</string>
    <string name="russia_country">Russia</string>
    <string name="singapore_country">Singapore</string>
    <string name="southafrica_country">South Africa</string>
    <string name="southkorea_country">South Korea</string>
    <string name="usa_country">U.S.A</string>
    <string name="or_text">OR</string>
    <string name="autoconnect_button">Click Here To Connect To Fastest Server</string>
    <string name="rate_us_title">Rate Us</string>
    <string name="rateus_message">If you enjoy using the app, would you mind taking a moment to rate it on the store?</string>
    <string name="rateus_yes">Yes</string>
    <string name="rateus_later">Later</string>
    <string name="defauldialog_title">Default Region</string>
    <string name="default_message">You want set this as your default region.</string>
    <string name="default_yes">Yes</string>
    <string name="default_no">No</string>
    <string name="reward_title">Unlock Region</string>
    <string name="reward_message">Unlock Region For 24 Hours By Viewing Ad.</string>
    <string name="reward_yes">Yes</string>
    <string name="reward_no">No</string>
    <string name="default_make">Default</string>
    <string name="make_default">Make Default</string>
    <string name="camera_scanner">Camera Scanner</string>
    <string name="secure_gallery">Secure Gallery</string>
    <string name="aman_2fa">Aman : 2FA</string>
    <string name="our_other_apps">Our Other Apps</string>
    <string name="tap_region">Tap Here For All Regions Available</string>
</resources>
