<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



            <ImageView
                android:id="@+id/sppedtest_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/ic_speed"
                tools:ignore="VectorDrawableCompat" />



            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/ping_speedtest"
                android:textAlignment="center"
                android:textColor="@color/Grey"
                android:textSize="22sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/pingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0 ms"
                android:textAlignment="center"
                android:textColor="@color/Grey"
                android:textSize="20sp"
                android:gravity="center_horizontal" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/download_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/download_speedtest"
                    android:textAlignment="center"
                    android:textColor="@color/Grey"
                    android:textSize="17sp"
                    android:textStyle="normal|bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/downloadTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/downloadspeed_speedtest"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/Grey"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:id="@+id/chartDownload"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <com.beyond.vpn360.app.custom.GaugeView
                        android:id="@+id/dlGauge"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/gaugeSize"
                        app:gauge_angles="270"
                        app:gauge_backgroundColor="@color/Grey"
                        app:gauge_fillColor="@color/White"
                        app:gauge_startAngle="135"
                        app:gauge_strokeWidth="@dimen/gaugeThickness" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/upload_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/upload_speedtest"
                    android:textAlignment="center"
                    android:textColor="@color/Grey"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/uploadTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uploadspeed_speedtest"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/Grey"
                    android:textSize="20sp"
                    android:gravity="center_horizontal" />



                    <com.beyond.vpn360.app.custom.GaugeView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/gaugeSize"
                        android:id="@+id/ulGauge"
                        app:gauge_startAngle="135"
                        app:gauge_angles="270"
                        app:gauge_strokeWidth="@dimen/gaugeThickness"
                        app:gauge_backgroundColor="@color/Grey"
                        app:gauge_fillColor="@color/White"
                        />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true">

                <Button
                    android:id="@+id/speedtest_startButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/btn_background"
                    android:shadowRadius="15"
                    android:text="@string/begin_test_speedtest"
                    android:textAllCaps="false"
                    android:textColor="@color/Grey"
                    android:textSize="16sp"
                    android:layout_alignParentLeft="true" />
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
